# ari_navigation

ari_2dnav/: CHANGELOG.rst  package.xml
ari_2dnav/config/rviz/: ari_test.rviz  navigation.rviz  navigation_public_sim.rviz
ari_2dnav/launch/: localization.launch  mapping.launch  mapping_karto.launch  move_base.launch  state_machine.launch
ari_laser_sensors/: CHANGELOG.rst  package.xml
ari_laser_sensors/config/: ydlidar_tg15_laser.yaml  ydlidar_tg30_laser.yaml
ari_maps/: CHANGELOG.rst  config  package.xml
ari_maps/configurations/pal_office/: map.pgm  map.yaml  pal.bin.REMOVED.git-id
ari_navigation/: CHANGELOG.rst  package.xml
ari_rgbd_sensors/: CHANGELOG.rst  CMakeLists.txt  package.xml
ari_rgbd_sensors/config/: calibration_odometry.json  config.json  rgbd_cloud_laser.yaml  torso_config_with_laser.json
ari_rgbd_sensors/launch/: depth_proc.launch  elp_cameras_relay.launch  elp_front.launch  elp_front_nodelet.launch  head_front_camera.launch  head_rgbd_camera.launch  register_depth.launch  rgbd_cloud_laser.launch  torso_back_camera.launch  torso_front_camera.launch
